--- a/style.css
+++ b/style.css
@@ -1,5 +1,60 @@
+
 body {
   width: 100%;
   height: 100%;
   margin: 0;
+}
+
+h1{
+  text-align:center;
+}
+
+.nav{
+  width:100%;
+  padding:20px;
+  margin: 0 auto;
+  display: flex;
+  justify-content: center;;
+  align-items: centre;
+  
+}
+img {
+  width: 100%;
+  display:block;
+  margin: 0 auto;
+}
+.figure{
+  width: 100%;
+  display: flex;
+  justify-content: center;
+
+}
+figcaption{
+  text-align: center;
+  font-style: italic;
+  margin-top: 10px;
+  
+}
+
+#featured-property{
+  width:800px;
+  margin: 0 auto;
+  margin-top:10px;
+  margin-bottom: 10px;
+  justify-content: center;
+  
+}
+
+#details{
+ 
+  width: 100%;
+  height:100%;
+
+  padding: 20px;
+  box-sizing: border-box;
+  background-color: red;
+  flex-direction:row;
+  display: flex;
+  margin: 0 auto;
+  justify-content:space-evenly;;
 }
